<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".forgot_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yeallw_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:layout_marginTop="10dp"
            android:src="@drawable/vector_bird_logo5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_128sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:fontFamily="@font/miltonian_tattoo"
            android:shadowColor="#8BC34A"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="You &amp; Me"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_95sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:fontFamily="@font/caudex"
                        android:text="@string/forgetpass"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/brygada_1918"
                        android:text="@string/massage1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_19sdp"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/brygada_1918"
                        android:text="@string/enter1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />


                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@drawable/edittext_touch_effect"
                        android:drawableStart="@drawable/email_vector_effect"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/caudex"
                        android:hint="@string/email"
                        android:textColorHint="#AEADAC"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:padding="17dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="18sp" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:background="@drawable/button_background"
                        android:fontFamily="@font/caudex"
                        android:text="@string/requestLink"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/back_To_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/caudex"
                        android:text="@string/back1"
                        android:textColor="#0EA514"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/instruction_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:drawableEnd="@drawable/down_key"
                    android:fontFamily="@font/caudex"
                    android:text="@string/Instruction"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:visibility="gone"
                app:cardBackgroundColor="#C3E9C5"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/_5sdp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/caudex"
                        android:text="@string/Instruction1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/caudex"
                        android:text="@string/Instruction2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/caudex"
                        android:text="@string/Instruction3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/caudex"
                        android:text="@string/Instruction4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/caudex"
                        android:text="@string/Instruction5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
