<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".skip_signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative_anime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/yeallw_top">

            <ImageView
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginLeft="@dimen/_49sdp"
                android:layout_marginTop="10dp"
                android:src="@drawable/vector_bird_logo5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_128sdp"
                android:layout_marginTop="@dimen/_28sdp"
                android:fontFamily="@font/miltonian_tattoo"
                android:shadowColor="#8BC34A"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="You &amp; Me"
                android:textColor="@color/white"
                android:textSize="@dimen/_24ssp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:fontFamily="@font/caudex"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/signIn"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:fontFamily="@font/caudex"
                android:text="@string/Viewyourwishlist"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:fontFamily="@font/caudex"
                android:text="@string/find"
                android:textColor="@color/black"

                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:fontFamily="@font/caudex"
                android:text="@string/track"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical">



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_40sdp"

                    android:background="@drawable/button_background"
                    android:fontFamily="@font/caudex"
                    android:text="@string/already"
                    android:padding="@dimen/_10sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />







            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/caudex"
                android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/newAc"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>